1px change because to fix list spacing in Firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ div#gm-content {
 
 .gm-content-pane ul li {
   display: inline;
-  margin-right: 34px;
+  margin-right: 33px;
 }
 
 li#amp {
